--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Project-Sekido
+APP_NAME=GamorotCottages
 APP_ENV=local
 APP_KEY=base64:u9SyK6qM7dHmYVz7zFYnNLLaeQVZcUS1DI5p/j6Ds/U=
 APP_DEBUG=true
@@ -26,10 +26,10 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=fb42d8432e8a55
+MAIL_PASSWORD=93e2855b3c68fb
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS=gamorotcottages@email.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
